gitops/apps/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
