gitops/apps/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      nodeName: gojo
      containers:
      - name: minio
        image: minio/minio:RELEASE.2024-06-22T05-26-45Z.fips
        args:
        - server
        - /storage
        - --console-address
        - ":9001"
        ports:
        - name: api
          containerPort: 9000
        - name: console
          containerPort: 9001
        volumeMounts:
        - name: storage
          mountPath: "/storage"
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio
